# messung

./: CMakeLists.txt  messung.c  messung.geany
st7735/: CMakeLists.txt  st7735.c  st7735.h
